Day 1 Bug Fixes.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -212,7 +212,7 @@
   "effect.goety.soul_hunger": "Soul Hunger",
   "effect.goety.soul_hunger.description": "Weakens movement, mining and attack speed and melee damage.",
 
-  "enchantment.goety.souleater": "Soul Eater",
+  "enchantment.goety.soul_eater": "Soul Eater",
   "enchantment.goety.wanting": "Wanting",
   "enchantment.goety.potency": "Potency",
   "enchantment.goety.radius": "Radius",
@@ -220,7 +220,7 @@
   "enchantment.goety.burning": "Burning",
   "enchantment.goety.absorb": "Life Absorb",
   "enchantment.goety.duration": "Duration",
-  "enchantment.goety.souleater.desc": "Increases the amount of Soul Energy gained after killing a mob.",
+  "enchantment.goety.soul_eater.desc": "Increases the amount of Soul Energy gained after killing a mob.",
   "enchantment.goety.wanting.desc": "Mobs will drop more loot when killed via Summoned Creatures/Spells.",
   "enchantment.goety.potency.desc": "Increases the damage of Spells.",
   "enchantment.goety.radius.desc": "Increases radius of Spells.",
@@ -238,10 +238,10 @@
   "key.goety.magnet": "Lich Magnet",
   "key.goety.lichKiss": "Lich Kiss",
 
-  "info.goety.goldtotem.souls": "\u00A7aSoul Energy: %d/%d\u00A7a",
-  "info.goety.soulitems.cost": "\u00A73Soul Cost: %d\u00A73",
-  "info.goety.soulitems.focus": "\u00A7dFocus:\u00A7d %d",
-  "info.goety.soulitems.focuscost": "\u00A7bOriginal Cost: %d\u00A7b",
+  "info.goety.totem_of_souls.souls": "\u00A7aSoul Energy: %d/%d\u00A7a",
+  "info.goety.wand.cost": "\u00A73Soul Cost: %d\u00A73",
+  "info.goety.wand.focus": "\u00A7dFocus:\u00A7d %d",
+  "info.goety.focus.cost": "\u00A7bOriginal Cost: %d\u00A7b",
   "info.goety.items.dark_scroll.desc": "\u00A75Must be used within a Woodland Mansion.\u00A75",
   "info.goety.items.dark_scroll.failure": "You are not within a Woodland Mansion!",
   "info.goety.items.forbidden_scroll": "\u00A75The Secrets to Immortality...\u00A75",
@@ -457,6 +457,10 @@
   "advancements.goety.craft_vexing_focus.description": "Look out for any Hermits outside of your windows.",
   "advancements.goety.craft_biting_focus.title": "The Floor Is Jaws",
   "advancements.goety.craft_biting_focus.description": "Perhaps it can be improved later on...",
+  "advancements.goety.kill_apostle.title": "Trumpeter's Shadow",
+  "advancements.goety.kill_apostle.description": "Defeated an Apostle, the Pale Faced envoy of the Nether.",
+  "advancements.goety.kill_vizier.title": "Arubian Nights",
+  "advancements.goety.kill_vizier.description": "Defeated a Vizier, royal minister of the Illagers.",
   "advancements.goety.become_lich.title": "I Am Beyond Strength",
   "advancements.goety.become_lich.description": "Ascend to Lichdom and become truly immortal!",
 
