Fixed Apostle Bug, Dark Robe Outer skin conflicts and more.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -91,6 +91,7 @@
   "item.goety.zpiglin_brute_servant_spawn_egg": "Zombified Piglin Brute Servant Spawn Egg",
 
   "item.goety.dark_wand": "Dark Wand",
+  "item.goety.necro_staff": "Necro Staff",
   "item.goety.totem_of_souls": "Totem of Souls",
   "item.goety.spent_totem": "Spent Totem of Souls",
   "item.goety.magic_emerald": "Awakened Emerald",
