Fixed Wartling crash, improved Wraiths visually.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -70,6 +70,7 @@
   "entity.goety.scythe":"Scythe Slash",
   "entity.goety.soul_bullet":"Soul Bullet",
   "entity.goety.soul_bolt":"Soul Bolt",
+  "entity.goety.necro_bolt":"Necro Bolt",
   "entity.goety.fang":"Magic Fang",
   "entity.goety.spike":"Royal Spike",
   "entity.goety.ice_bouquet":"Ice Bouquet",
@@ -112,6 +113,7 @@
 
   "item.goety.dark_wand": "Dark Wand",
   "item.goety.necro_staff": "Necro Staff",
+  "item.goety.nameless_staff": "Nameless Staff",
   "item.goety.totem_of_souls": "Totem of Souls",
   "item.goety.spent_totem": "Spent Totem of Souls",
   "item.goety.magic_emerald": "Awakened Emerald",
@@ -156,9 +158,11 @@
   "item.goety.dark_hat": "Dark Hat",
   "item.goety.witch_hat": "Witches Hat",
   "item.goety.necro_crown": "Necro Crown",
+  "item.goety.nameless_crown": "Nameless Crown",
   "item.goety.dark_robe": "Dark Robe",
   "item.goety.illusion_robe": "Illusive Robe",
   "item.goety.necro_cape": "Necro Cape",
+  "item.goety.nameless_cape": "Nameless Cape",
   "item.goety.witch_robe": "Witches Robe",
   "item.goety.witch_robe.brew": "Witches Robe",
   "item.goety.grave_glove": "Grave Gloves",
@@ -554,7 +558,7 @@
   "jei.goety.craftType.null": "Ritual Type: Empty",
   "jei.goety.craftType.animation": "Ritual Type: Animation",
   "jei.goety.craftType.necroturgy": "Ritual Type: Necroturgy",
-  "jei.goety.craftType.lich": "Ritual Type: Necroturgy",
+  "jei.goety.craftType.lich": "Ritual Type: Master Necroturgy",
   "jei.goety.craftType.minor_nether": "Ritual Type: Minor Nether",
   "jei.goety.craftType.forge": "Ritual Type: Forge",
   "jei.goety.craftType.magic": "Ritual Type: Magic",
