Fixed Wartling crash, improved Wraiths visually.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -315,9 +315,9 @@
   "info.goety.research.lich": "You have learned the secret to Immortality!",
   "info.goety.ritual.fail": "You do not know how to properly start this ritual!",
   "info.goety.ritual.structure.fail": "Inefficient Requirements!",
-  "info.goety.minion.wander": "%s is now Wandering",
-  "info.goety.minion.staying": "%s is now Standing By",
-  "info.goety.minion.follow": "%s is now Following",
+  "info.goety.servant.wander": "%s is now Wandering",
+  "info.goety.servant.staying": "%s is now Standing By",
+  "info.goety.servant.follow": "%s is now Following",
   "info.goety.lichdom.success": "You have ascended your mortal coil!",
   "info.goety.lichdom.fail": "You didn't prepare yourself properly to drink the potion!",
   "info.goety.apostle.summon": "A dark presence washes over you...",
