Readded Shielding Amulet, Fixed Arca End Reset Bug.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -166,6 +166,7 @@
   "item.goety.witch_robe": "Witches Robe",
   "item.goety.witch_robe.brew": "Witches Robe",
   "item.goety.grave_glove": "Grave Gloves",
+  "item.goety.star_amulet": "Soul Shield Amulet",
 
   "item.goety.empty_focus": "Empty Focus",
   "item.goety.animation_core": "Animation Core",
