Tweaked Black Book Entries, Apostle and Malghast Behaviors.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -8,7 +8,7 @@
   "name.goety.apostle.6" : "Ur-Tsar",
   "name.goety.apostle.7" : "Khormack",
   "name.goety.apostle.8" : "Gan'Dak",
-  "name.goety.apostle.9" : "Malghash",
+  "name.goety.apostle.9" : "Armon",
   "name.goety.apostle.10" : "Baal Zephon",
   "name.goety.apostle.11" : "Vexx Mock",
   "name.goety.apostle.12" : "Krozen",
@@ -179,6 +179,8 @@
   "item.goety.warlock_sash": "Warlock Sash",
   "item.goety.warlock_robe": "Warlock Robe",
   "item.goety.grave_glove": "Grave Gloves",
+  "item.goety.targeting_monocle": "Targeting Monocle",
+  "item.goety.wayfarers_belt": "Wayfarer's Belt",
   "item.goety.star_amulet": "Soul Shield Amulet",
   "item.goety.pendant_of_hunger": "Pendant of Hunger",
 
@@ -199,6 +201,7 @@
   "item.goety.fireball_focus": "Fireball Focus",
   "item.goety.lavaball_focus": "Lava Bomb Focus",
   "item.goety.soul_bolt_focus": "Soul Bolt Focus",
+  "item.goety.sword_focus": "Magic Sword Focus",
   "item.goety.updraft_focus": "Updraft Focus",
   "item.goety.wind_blast_focus": "Wind Blast Focus",
   "item.goety.lightning_focus": "Lightning Focus",
