Made Dark Armor look darker, changed how Haunted Skull works

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -68,6 +68,7 @@
   "entity.goety.fireball": "Small Fireball",
   "entity.goety.lavaball": "Fireball",
   "entity.goety.grand_lavaball": "Grand Fireball",
+  "entity.goety.haunted_skull_shot": "Haunted Skull",
   "entity.goety.sword":"Flying Sword",
   "entity.goety.scythe":"Scythe Slash",
   "entity.goety.soul_bullet":"Soul Bullet",
@@ -220,6 +221,7 @@
   "item.goety.sword_focus": "Magic Sword Focus",
   "item.goety.updraft_focus": "Updraft Focus",
   "item.goety.wind_blast_focus": "Wind Blast Focus",
+  "item.goety.charge_focus": "Charge Focus",
   "item.goety.lightning_focus": "Lightning Focus",
   "item.goety.shockwave_focus": "Shockwave Focus",
   "item.goety.sonic_boom_focus": "Sonic Boom Focus",
@@ -351,8 +353,12 @@
   "effect.goety.rampage.description": "Increases melee attack damage by 0.5 heart per level, Increases mining and attack speed. Spawns an explosion after gaining 5 levels.",
   "effect.goety.climbing": "Climbing",
   "effect.goety.climbing.description": "Grants ability to climb up horizontal walls and move through Cobwebs.",
+  "effect.goety.wane": "Wane",
+  "effect.goety.wane.description": "Weakens movement, and melee damage.",
   "effect.goety.pressure": "Pressure",
   "effect.goety.pressure.description": "Creepers will explode nigh-instantly towards targets with this effect.",
+  "effect.goety.charged": "Charged",
+  "effect.goety.charged.description": "Level I gives 10% boost to speed and melee damage, Level II gives 25% boost to speed and reduction in melee damage. Gaining another Level will give damage.",
 
   "enchantment.goety.soul_eater": "Soul Eater",
   "enchantment.goety.wanting": "Wanting",
@@ -375,10 +381,15 @@
   "key.goety.wand": "Open Wand Focus Slot",
   "key.goety.wandandbag": "Open Bag with Wand",
   "key.goety.bag": "Open Focus Bag",
-  "key.goety.robe": "Open Witches Robe",
   "key.goety.ceaseFire": "Cease Fire",
   "key.goety.magnet": "Lich Magnet",
   "key.goety.lichKiss": "Lich Kiss",
+
+  "key.goety.witch.category": "Goety Witch",
+  "key.goety.witch.robe": "Open Witches Robe",
+  "key.goety.witch.addFuel": "Add Fuel",
+  "key.goety.witch.addCatalyst": "Add Bottles or Catalyst",
+  "key.goety.witch.extractPotions": "Extract Potions",
 
   "info.goety.totem_of_souls.souls": "§aSoul Energy: %d/%d§a",
   "info.goety.wand.cost": "§3Soul Cost:§3 %d",
@@ -643,6 +654,8 @@
   "death.attack.goety.directFreeze.player": "%1$s was frozen while fighting %2$s",
   "death.attack.goety.indirectFreeze": "%1$s has been frozen by %2$s",
   "death.attack.goety.indirectFreeze.item": "%1$s has been frozen by %2$s using %3$s",
+  "death.attack.goety.shock": "%1$s was electrocuted",
+  "death.attack.goety.shock.player": "%1$s was electrocuted whilst fighting %2$s",
   "death.attack.goety.directShock": "%1$s was electrocuted by %2$s",
   "death.attack.goety.directShock.item": "%1$s was electrocuted by %2$s using %3$s",
   "death.attack.goety.windBlast": "%1$s has been air-blasted by %2$s",
