Fixed divide by zero crash. Added and buffed brews.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -158,6 +158,7 @@
   "item.goety.jade": "Jade",
   "item.goety.spider_egg": "Spider Egg",
   "item.goety.warped_wartful_egg": "Warped Wartful Egg",
+  "item.goety.venomous_fang": "Venomous Fang",
   "item.goety.dark_fabric": "Dark Fabric",
   "item.goety.magic_fabric": "Magic Fabric",
   "item.goety.occult_fabric": "Occult Fabric",
@@ -393,20 +394,29 @@
   "effect.goety.arrowmantic.description": "Attract arrows towards the affected entities. Higher levels increases the radius.",
   "effect.goety.flame_hands": "Flame Hands",
   "effect.goety.flame_hands.description": "Physical attacks sets entities aflame for 4 seconds with each level increasing the duration.",
+  "effect.goety.venomous_hands": "Venomous Hands",
+  "effect.goety.venomous_hands.description": "Physical attacks gives Poison for 10 seconds with each level increasing the level.",
   "effect.goety.repulsive": "Repulsive",
   "effect.goety.repulsive.description": "Knocks back attacking entity away. Higher levels increases knockback distance.",
   "effect.goety.explosive": "Explosive",
   "effect.goety.explosive.description": "Have a chance of unleashing an explosion when hurt. Higher levels increases chance and explosion strength.",
   "effect.goety.swift_swim": "Swift Swim",
   "effect.goety.swift_swim.description": "Increase speed when swimming.",
+  "effect.goety.fiery_aura": "Fiery Aura",
+  "effect.goety.fiery_aura.description": "Sets nearby entities on fire. Higher levels increases range and burn duration.",
   "effect.goety.blind_jump": "Blind Jump",
   "effect.goety.blind_jump.description": "Causes random teleportation.",
   "effect.goety.love": "Love",
   "effect.goety.fertility": "Fertility",
   "effect.goety.growth": "Growth",
   "effect.goety.mossify": "Mossify",
+  "effect.goety.grow_cactus": "Grow Cactus",
+  "effect.goety.grow_cave_vines": "Grow Cave Vines",
+  "effect.goety.shear": "Shear",
+  "effect.goety.flaying": "Flaying",
   "effect.goety.pruning": "Pruning",
   "effect.goety.chop_tree": "Chop Tree",
+  "effect.goety.bees": "BEEEEES",
   "effect.goety.combust": "Combust",
   "effect.goety.extinguish": "Extinguish",
   "effect.goety.sweet_thorns": "Sweet Thorns",
