Added Ravager Armors, Armored Ravagers, Grimoire of Grudges and more.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -67,6 +67,7 @@
   "entity.goety.skeleton_villager_servant":"Skeleton Villager Servant",
   "entity.goety.ravaged":"Ravaged",
   "entity.goety.ravager":"Ravager",
+  "entity.goety.armored_ravager":"Ravager",
   "entity.goety.zpiglin_servant":"Zombified Piglin Servant",
   "entity.goety.zpiglin_brute_servant":"Zombified Piglin Brute Servant",
   "entity.goety.malghast":"Malghast",
@@ -207,6 +208,10 @@
   "item.goety.warped_wartful_egg": "Warped Wartful Egg",
   "item.goety.venomous_fang": "Venomous Fang",
   "item.goety.ominous_saddle": "Ominous Saddle",
+  "item.goety.iron_ravager_armor": "Iron Ravager Armor",
+  "item.goety.gold_ravager_armor": "Gold Ravager Armor",
+  "item.goety.diamond_ravager_armor": "Diamond Ravager Armor",
+  "item.goety.netherite_ravager_armor": "Netherite Ravager Armor",
   "item.goety.dark_fabric": "Dark Fabric",
   "item.goety.magic_fabric": "Magic Fabric",
   "item.goety.occult_fabric": "Occult Fabric",
@@ -232,6 +237,8 @@
   "item.goety.berserk_fungus": "Berserk Fungus",
   "item.goety.wartful_egg": "Wartful Egg",
   "item.goety.refuse_bottle": "Bottle of Refuse",
+
+  "item.goety.grimoire_of_grudges": "Grimoire of Grudges",
 
   "item.goety.brew": "Witch's Brew",
   "item.goety.splash_brew": "Witch's Splash Brew",
@@ -530,6 +537,8 @@
   "effect.goety.photosynthesis.description": "Regenerates health when in sunlight; higher levels make health regenerate quicker.",
   "effect.goety.flammable": "Flammable",
   "effect.goety.flammable.description": "Affected entities take more damage from fire; does not effect fire resistant entities.",
+  "effect.goety.save_effects": "Save Effects",
+  "effect.goety.save_effects.description": "Effects persists after affected player's death. Does nothing if player is in hardcore.",
   "effect.goety.love": "Love",
   "effect.goety.fertility": "Fertility",
   "effect.goety.growth": "Growth",
@@ -603,8 +612,8 @@
   "key.goety.witch.extractPotions": "Extract Potions",
 
   "key.goety.ravager.category": "Goety Ravager",
-  "key.goety.ravager.freeRoam": "Ravager Free Roam",
   "key.goety.ravager.roar": "Ravager Roar",
+  "key.goety.ravager.freeRoam": "Ravager Autonomous",
 
   "info.goety.totem_of_souls.souls": "§aSoul Energy: %d/%d§a",
   "info.goety.wand.cost": "§3Soul Cost:§3 %d",
@@ -635,6 +644,14 @@
   "info.goety.ritual.wrongItems.fail": "Certain Items aren't part of the Requirements!",
   "info.goety.ritual.cannotConsume.fail": "Cannot consume Item!",
   "info.goety.ritual.notCatalyst.fail": "Item is not Ritual Catalyst!",
+  "info.goety.grimoire.addType": "Added all %s to Grimoire",
+  "info.goety.grimoire.add": "Added %s to Grimoire",
+  "info.goety.grimoire.removeType": "Removed all %s from Grimoire",
+  "info.goety.grimoire.remove": "Removed %s from Grimoire",
+  "info.goety.grimoire.emptyTypes": "No Grudge against any Entity Type",
+  "info.goety.grimoire.type": "Grudge against Entity Types:",
+  "info.goety.grimoire.empty": "No Grudge against any one",
+  "info.goety.grimoire.grudges": "Grudge against:",
   "info.goety.servant.wander": "%s is now Wandering",
   "info.goety.servant.staying": "%s is now Standing By",
   "info.goety.servant.follow": "%s is now Following",
@@ -786,6 +803,7 @@
   "commands.goety.illager.spawn.failure": "%s doesn't have enough Soul Energy for Illagers to spawn",
   "commands.summon_noai.success": "Summoned new %s with no Ai",
   "commands.summon_persist.success": "Summoned new Persistent %s",
+  "commands.summon_tame.success": "Summoned new Tamed %s",
   "commands.goety.research.get": "%s has these research:",
   "commands.goety.research.get.empty": "%s has no research",
   "commands.goety.research.add.success": "Added research to %s",
