Fixed and improved some stuff and fully added Frost Robe.

--- a/src/main/resources/assets/goety/lang/en_us.json
+++ b/src/main/resources/assets/goety/lang/en_us.json
@@ -241,6 +241,7 @@
   "item.goety.occult_fabric": "Occult Fabric",
   "item.goety.spirit_fabric": "Spirit Fabric",
   "item.goety.gale_fabric": "Gale Fabric",
+  "item.goety.chill_fabric": "Chill Fabric",
 
   "item.goety.ravaging_scroll": "Ravaging Scroll",
   "item.goety.warred_scroll": "Warred Scroll",
@@ -575,6 +576,8 @@
   "effect.goety.fire_trail.description": "Walking sets the ground beneath on fire.",
   "effect.goety.fiery_aura": "Fiery Aura",
   "effect.goety.fiery_aura.description": "Sets nearby entities on fire; higher levels increases range and burn duration.",
+  "effect.goety.frosty_aura": "Frosty Aura",
+  "effect.goety.frosty_aura.description": "Gives nearby entities Freezing; higher levels increases range and Freezing level.",
   "effect.goety.plunge": "Plunge",
   "effect.goety.plunge.description": "Causes flying or swimming affected entities to drop towards the ground.",
   "effect.goety.photosynthesis": "Photosynthesis",
@@ -698,6 +701,8 @@
   "info.goety.ritual.wrongItems.fail": "Certain Items aren't part of the Requirements!",
   "info.goety.ritual.cannotConsume.fail": "Cannot consume Item!",
   "info.goety.ritual.notCatalyst.fail": "Item is not Ritual Catalyst!",
+  "info.goety.ritual.noSouls.fail": "Not enough Soul Energy!",
+  "info.goety.ritual.itemProblem.fail": "Missing or Incorrect Items",
   "info.goety.grimoire.addType": "Added all %s to Grimoire",
   "info.goety.grimoire.add": "Added %s to Grimoire",
   "info.goety.grimoire.removeType": "Removed all %s from Grimoire",
